--- a/clothrecommendweb.html
+++ b/clothrecommendweb.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8"/>
-        <title>상 하의 색 추천 사이트</title>
+        <title>clothrecommendweb</title>
     </head>
     <body bgcolor="#e1eff2">
           
