--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     <br>
     <br> 
-    <img src="https://postfiles.pstatic.net/MjAyMjA1MTBfMzUg/MDAxNjUyMTY5Njg2NjY4.Nm8XVVdf6FdDYa1eTiHn6VbZoJoaMfcqlCTcss3wMx0g.UCSc_isGS_gNpUntLl89VZcynIBiH5NYHqexslvFXf4g.PNG.5yechan2/%EB%B2%84%ED%8A%BC.png?type=w773">
+    <img src="C:\Users\82102\Desktop\새 폴더\버튼.png">
     </a>  
     </center>
     </body>
