--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <br>
     <br>
     <br>
-    <br> 
-    <img src="C:\Users\82102\Desktop\새 폴더\버튼.png">
+    <br>
+    <a href="index1.html"target="_self">
+    <img src="https://postfiles.pstatic.net/MjAyMjA1MTBfMzUg/MDAxNjUyMTY5Njg2NjY4.Nm8XVVdf6FdDYa1eTiHn6VbZoJoaMfcqlCTcss3wMx0g.UCSc_isGS_gNpUntLl89VZcynIBiH5NYHqexslvFXf4g.PNG.5yechan2/%EB%B2%84%ED%8A%BC.png?type=w773.png">
     </a>  
     </center>
     </body>
